fix: change header and footer element position for better visual alignment

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -31,6 +31,10 @@
   transform: translateY(-0.25em);
 }
 
+.footer-link {
+  letter-spacing: 6px;
+}
+
 .footer-link,
 .footer-year {
   color: #e5994e;
